Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-116886

Fix documentation for QDataStream::Version::6_6

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P3: Somewhat important P3: Somewhat important
    • 6.10.1, 6.11.0 Beta3
    • 6.6.0 Beta3
    • Core: I/O
    • None
    • 9478ff27c (dev), 251532a0a (6.10)

      https://doc-snapshots.qt.io/qt6-6.6/qdatastream.html#Version-enum currently claims:

      QDataStream::Qt_6_5 Qt_6_0 Same as Qt_6_0
      QDataStream::Qt_6_6 21 Same as Qt_6_0

      which is quite obviously not the case. Unfortunately, not the only one in the table?

      Can we maybe skip the description altogether, as it is rather superficial?

        For Gerrit Dashboard: QTBUG-116886
        # Subject Branch Project Status CR V

            thiago Thiago Macieira
            kkohne Kai Köhne
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There is 1 open Gerrit change