QDataStream: remove description from Version enum values' docs

It's redundant; the repeated values clearly show that the version
doesn't necessarily change with each Qt release:
Constant               Value
QDataStream::Qt_6_5    Qt_6_0
QDataStream::Qt_6_6    21
QDataStream::Qt_6_7    22
QDataStream::Qt_6_8    Qt_6_7

This also makes updating the enum values simpler, and avoids bugs like
QTBUG-116886.

Fixes: QTBUG-116886
Pick-to: 6.8 6.5
Change-Id: Ie89c29417e5c901f693f0fcc1906fde46f39d27e
Reviewed-by: Kai Köhne <kai.koehne@qt.io>
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>
(cherry picked from commit 9478ff27cccfd81b9bc914ccec4e1ddf3eb7fd30)